# ScholarOS

./: .env.exxamples  README.md  pyproject.toml
apps/api/: main.py
apps/web/apps/web/src/: App.jsx
shared/: schemas.py
